fixed alignment of arecipe photo uploader

--- a/src/components/AddRecipePage/AddRecipeForm/AddRecipeForm.module.css
+++ b/src/components/AddRecipePage/AddRecipeForm/AddRecipeForm.module.css
@@ -572,10 +572,6 @@
     grid-template-columns: 1fr;
   }
 
-  .left {
-    justify-content: flex-start;
-  }
-
   .uploader,
   .previewBlock,
   .previewFrame {
